[gd_scene load_steps=3 format=3 uid="uid://c7yu156e8bmkt"]

[ext_resource type="Script" path="res://UserInterface/MainMenu.gd" id="1_ad4oy"]

[sub_resource type="Theme" id="Theme_kg7lu"]

[node name="MainMenu" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.262745, 0.34902, 0.631373)
script = ExtResource("1_ad4oy")
Next_Scene = "res://Gameplay.tscn"

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -272.0
offset_top = -68.5
offset_right = 272.0
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_kg7lu")
theme_override_font_sizes/normal_font_size = 100
text = "Game Title"
fit_content_height = true
scroll_active = false

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = 260.0
offset_right = 150.0
offset_bottom = 486.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_right = 300.0
offset_bottom = 68.0
size_flags_vertical = 3
text = "Start
"

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 78.0
offset_right = 300.0
offset_bottom = 147.0
size_flags_vertical = 3
text = "Button Options"

[node name="ExitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
offset_top = 157.0
offset_right = 300.0
offset_bottom = 226.0
size_flags_vertical = 3
text = "Exit"

[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
